# historicaldate

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  old_readme_material.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
data/culture/: English_language_playwrights_prototype.csv
data/europe/countries/United Kingdom/: Major events in British History.csv
data/history/europe/United Kingdom/: British Monarchs.csv  British Prime Ministers.csv
docs/: colorgen.rst  conf.py  hdate.rst  hdateutils.rst  hdpl.rst  hdplutils.rst  hdtimeline.rst  hdtimelineutils.rst  hdtopic.rst  index.rst  lineorganiser.rst  overview.rst  requirements.txt
hdate/: hdate.py
historicaldate/: colorgen.py  hdate.py  hdateutils.py  hdpl.py  hdplotly.py  hdplutils.py  hdtimeline.py  hdtimelineutils.py  hdtopic.py  lineorganiser.py  utils.py
historydate/: hdate.py  hdplotly.py  lineorganiser.py
sample_code/: example1.py
temp/: pyproject.toml  setup.py
test_data/: British Monarchs_extract_notok_no_label.csv  British Monarchs_extract_ok.csv  Playwrights_extract_ok.csv
tests/: test_bc.py  test_cycle.py  test_default.py  test_dmy.py  test_hdate1.py  test_mdy.py  test_utils.py  utils_for_tests.py
timelines/culture/: temp_debug_playwrights.py  the_bronte_sisters.py  western_canon.py
timelines/history/: british_history_since_1066.py  six_wives_of_henry_VIII.py
timelines/sport/: english_club_football.py  english_football.py
